--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "license": "MIT",
   "repository": {
-    "url": "https://github.com/surimi1/autocsp.git",
+    "url": "https://github.com/cgnl/autocsp.git",
     "type": "git"
   },
-  "bugs": "https://github.com/surimi1/autocsp/",
+  "bugs": "https://github.com/cgnl/autocsp/",
   "devDependencies": {
     "@babel/preset-env": "^7.23.9",
     "@babel/cli": "^7.23.9",
